--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 
 buildscript {
     ext.android_support_version="25.1.0"
+    ext.retrofit_version = "2.1.0"
     repositories {
         jcenter()
         mavenCentral()
