--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
+    compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'me.relex:circleindicator:1.2.2@aar'
 
 
 
