--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 
 buildscript {
+    ext.kotlin_version = '1.1.4'
     ext.android_support_version="25.1.0"
     ext.retrofit_version = "2.1.0"
     ext.kotlin_version= "1.1.4"
