--- a/appmy/build.gradle
+++ b/appmy/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 /*apply plugin: 'com.android.library'*/
 /*apply plugin: 'com.jakewharton.butterknife'*/
 
@@ -48,8 +49,10 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'com.android.support:percent:23.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
 
-
-
+}
+repositories {
+    mavenCentral()
 }
