--- a/truckrental/build.gradle
+++ b/truckrental/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.facebook.fresco:fresco:0.10.0+'
+    compile 'io.reactivex:rxjava:1.1.5+'
+    compile 'io.reactivex:rxandroid:1.2.1+'
     testCompile 'junit:junit:4.12'
 }
