--- a/appmy/build.gradle
+++ b/appmy/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
     compile 'com.android.support:percent:23.1.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 
 }
