--- a/truckrental/build.gradle
+++ b/truckrental/build.gradle
@@ -32,10 +32,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile 'com.facebook.fresco:fresco:0.10.0+'
-    compile 'io.reactivex:rxjava:1.1.5+'
-    compile 'io.reactivex:rxandroid:1.2.1+'
     testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:8.7.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'io.reactivex:rxjava:1.1.5'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.facebook.fresco:fresco:0.10.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp:0.10.0'
+    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
+    compile 'com.android.support:percent:23.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
