--- a/truckrental/src/main/AndroidManifest.xml
+++ b/truckrental/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.aqrlei.graduation.truckrental">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".baselib.base.BaseApplication"
@@ -10,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".baselib.base.BaseActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
