--- a/truckrental/src/main/AndroidManifest.xml
+++ b/truckrental/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.aqrlei.graduation.truckrental">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -12,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.AnimationActivity">
+
+        </activity>
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
