--- a/truckrental/src/main/AndroidManifest.xml
+++ b/truckrental/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.AnimationActivity">
+        <activity
+            android:name=".ui.AnimationActivity"
+            android:launchMode="singleTask">
 
         </activity>
-        <activity android:name=".ui.MainActivity">
+        <activity
+            android:name=".ui.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
