--- a/appmy/src/main/AndroidManifest.xml
+++ b/appmy/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
 
         </activity>
         <activity
-            android:name=".activity.TestActivity"
+            android:name=".activity.SuspensionActivity"
             android:screenOrientation="portrait"
             android:launchMode="singleTask">
 
