--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.aqrlei.graduation.yueting.baselib.base.BaseApplication"
+        android:name=".baselib.base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,15 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:screenOrientation="portrait"
-            android:name="com.aqrlei.graduation.yueting.ui.YueTingActivity"
-            android:launchMode="singleTask">
+            android:name=".ui.YueTingActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
 
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name="com.aqrlei.graduation.yueting.ui.MainActivity"
-            android:launchMode="singleTask">
+            android:name=".ui.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
