--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.1.4-release-Studio2.3-2'
+    ext.kotlin_version = '1.1.4-3'
     ext.android_support_version="25.1.0"
     ext.retrofit_version = "2.1.0"
     ext.kotlin_version= "1.1.4"
