--- a/aqrleilib/src/main/AndroidManifest.xml
+++ b/aqrleilib/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 
     package="com.aqrairsigns.aqrleilib">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
