--- a/aqrleilib/build.gradle
+++ b/aqrleilib/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 26
+    compileSdkVersion 25
     buildToolsVersion "26.0.1"
     sourceSets {
         main {
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
 
@@ -30,7 +30,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -40,28 +40,20 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:percent:23.1.0'
-
-
-
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
     /* compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
-     compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
-     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-      compile 'com.google.code.gson:gson:2.6.2'*/
-
+         compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+         compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+         compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+          compile 'com.google.code.gson:gson:2.6.2'*/
     compile 'com.facebook.fresco:fresco:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp:0.10.0'
     compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0'
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-
     compile 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
-
     testCompile 'junit:junit:4.12'
 }
