--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -1,26 +1,11 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion "26.0.1"
-    sourceSets {
-        main {
-            java.srcDirs += 'src/main/kotlin'
-            res.srcDirs = ['src/main/res/yueting/read',
-                           'src/main/res/yueting/music',
-                           'src/main/res/yueting/common',
-                           'src/main/res/yueting/home',
-                           'src/main/res/yueting',
-                           'src/main/res'
-            ]
-
-        }
-
-    }
 
     defaultConfig {
-        applicationId "com.aqrlei.graduation.yueting"
+        applicationId "com.example.testapp"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -38,10 +23,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':aqrleilib')
+
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     testCompile 'junit:junit:4.12'
 }
