--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service android:name=".service.MusicService" />
+        <service
+            android:name=".service.MusicService"
+            android:process=":musicPlayer" />
+
         <activity
             android:name=".ui.YueTingActivity"
             android:launchMode="singleTask"
@@ -19,8 +22,7 @@
         </activity>
         <activity
             android:name=".ui.FileActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
