--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -43,5 +43,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':aqrleilib')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
