--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -16,23 +16,26 @@
 
         <activity
             android:name=".ui.YueTingActivity"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:excludeFromRecents="true"
-            android:taskAffinity="">
+            android:parentActivityName=".ui.MainActivity"
+            android:launchMode="singleTask">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
 
         </activity>
         <activity
             android:name=".ui.FileActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.PlayActivity"></activity>
     </application>
 
 </manifest>
