--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -16,13 +16,14 @@
 
         <activity
             android:name=".ui.YueTingActivity"
-            android:parentActivityName=".ui.MainActivity"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
 
         </activity>
+        <activity android:name=".ui.PlayActivity" />
         <activity
             android:name=".ui.FileActivity"
             android:screenOrientation="portrait" />
@@ -35,7 +36,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.PlayActivity"></activity>
     </application>
 
 </manifest>
