--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aqrlei.graduation.yueting">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <application
         android:name=".YueTingApplication"
         android:allowBackup="true"
