--- a/aqrleilib/build.gradle
+++ b/aqrleilib/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     sourceSets {
         main {
             java.srcDirs += [
