--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,18 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.1.51-release-Studio3.0-1'
+    ext.kotlin_version = '1.2.21-release-Studio3.0-1'
     ext.android_support_version="25.1.0"
     ext.retrofit_version = "2.1.0"
-    ext.kotlin_version= "1.1.51"
+    ext.kotlin_version= "1.2.21"
     repositories {
 
         jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.7.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -26,6 +27,7 @@ allprojects {
 
         jcenter()
         mavenCentral()
+        google()
     }
 }
 
