#update - morning - add views

--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
             android:name=".ui.ReadActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.CatalogActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.FileActivity"
             android:screenOrientation="portrait" />
         <activity
