#update - remove pdf.js and do others

--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 android:value=".ui.YueTingActivity" />
         </activity>
         <activity
-            android:name=".ui.ReadActivity"
+            android:name=".ui.TxtReadActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.CatalogActivity"
