--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -43,6 +43,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':aqrleilib')
+    compile project(':android-pdf-viewer')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
