--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 
 buildscript {
-    ext.kotlin_version = '1.2.21-release-Studio3.0-1'
+    ext.kotlin_version = '1.2.31'
     ext.android_support_version="25.1.0"
     ext.retrofit_version = "2.1.0"
     ext.kotlin_version= "1.2.21"
@@ -13,7 +13,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
+        classpath 'com.android.tools.build:gradle:3.1.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0"
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.7.0'
