--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.31'
-    ext.android_support_version="25.1.0"
+    ext.android_support_version = "25.1.0"
     ext.retrofit_version = "2.1.0"
     repositories {
 
@@ -18,8 +18,6 @@ buildscript {
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.7.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-// NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
