--- a/aqrleilib/build.gradle
+++ b/aqrleilib/build.gradle
@@ -34,20 +34,19 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    api 'com.android.support:appcompat-v7:25.3.1'
-    api 'com.android.support:design:25.3.1'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
-    api 'com.android.support:recyclerview-v7:25.3.1'
-    api 'com.android.support:multidex:1.0.0'
-    api 'com.android.support:percent:25.3.1'
+    api "com.android.support:appcompat-v7:$android_support_version"
+    api "com.android.support:design:$android_support_version"
+    api 'com.android.support.constraint:constraint-layout:1.1.0'
+    api "com.android.support:recyclerview-v7:$android_support_version"
+    api 'com.android.support:multidex:1.0.3'
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'com.facebook.fresco:fresco:0.10.0'
+    api 'com.facebook.fresco:fresco:1.0.1'
     api 'com.facebook.fresco:imagepipeline-okhttp:0.10.0'
     api 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0'
-    api 'com.facebook.stetho:stetho:1.4.2'
-    api 'com.facebook.stetho:stetho-okhttp3:1.4.2'
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'io.reactivex.rxjava2:rxjava:2.1.3'
+    api 'com.facebook.stetho:stetho:1.5.0'
+    api 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxjava:2.1.12'
     api 'com.jakewharton:butterknife:8.7.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     testImplementation 'junit:junit:4.12'
