--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -43,7 +43,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation project(':aqrleilib')
-    implementation project(':android-pdf-viewer')
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
 }
