--- a/yueting/src/main/AndroidManifest.xml
+++ b/yueting/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
     <application
         android:name=".YueTingApplication"
         android:allowBackup="false"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="false"
         android:theme="@style/AppTheme">
         <service
             android:name=".service.MusicService"
@@ -27,6 +27,7 @@
                 android:value=".ui.MainActivity" />
         </activity>
         <activity android:name=".ui.YueTingListActivity" />
+        <activity android:name=".ui.ManageListActivity" />
         <activity
             android:name=".ui.PlayActivity"
             android:parentActivityName=".ui.YueTingActivity">
@@ -51,7 +52,6 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
