--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -7,7 +7,7 @@ android {
     sourceSets {
         main {
             java.srcDirs += 'src/main/kotlin'
-            aidl.srcDirs +='src/main/aidl'
+            aidl.srcDirs += 'src/main/aidl'
             res.srcDirs = ['src/main/res/yueting/read',
                            'src/main/res/yueting/music',
                            'src/main/res/yueting/common',
@@ -32,6 +32,10 @@ android {
     }
     buildTypes {
         release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
