--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -38,12 +38,9 @@ android {
 
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            def fileName
-            if (variant.buildType.name == "release") {
-                fileName = "YueTing_${defaultConfig.versionName}_${buildTime()}.apk"
-            } else {
-                fileName = "YueTing_beta_${defaultConfig.versionName}_${buildTime()}.apk"
-            }
+            def dirFile = "./apk/${variant.buildType.name}"
+            def fileName = "YueTing_${variant.buildType.name}_${defaultConfig.versionName}_${buildTime()}.apk"
+            variant.packageApplication.outputDirectory = new File(dirFile)
             outputFileName = fileName
         }
     }
