--- a/yueting/build.gradle
+++ b/yueting/build.gradle
@@ -11,10 +11,13 @@ android {
         applicationId "com.aqrlei.graduation.yueting"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "x86_64","arm64-v8a","mips"
+        }
     }
     aaptOptions {
         cruncherEnabled = false
@@ -37,7 +40,7 @@ android {
     }
 
     android.applicationVariants.all { variant ->
-        //variant.packageApplication.outputDirectory = new File("./apk/${variant.buildType.name}")
+        variant.packageApplication.outputDirectory = new File("./apk/${variant.buildType.name}")
         variant.outputs.all {
             def fileName = "YueTing_${variant.buildType.name}_${defaultConfig.versionName}_${buildTime()}.apk"
             outputFileName = fileName
